<resources>
    <string name="app_name">MemesPool</string>


    <string name="register">Register</string>
    <string name="register_message">Not registered? Sign up here</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="selectImage">Select Image</string>
    <string name="passwordsNotMatching">Passwords are not matching</string>
    <string name="invalidEmail">Invalid E-mail</string>
    <string name="confirmPassIsEmpty">Confirm password is empty</string>
    <string name="passwordIsEmpty">Password is empty</string>
    <string name="emailIsEmpty">E-mail is empty</string>
    <string name="nameIsEmpty">Name is empty</string>
    <string name="needPermissionsProfilePic">We need permissions to set profile picture</string>
    <string name="unableToLoadProfilePic">Unable to load profile picture</string>
    <string name="unbleToContactServer">Unable to contact server</string>
    <string name="noResponse">No response from server</string>
    <string name="verifyEmailMessage">An email with verification link sent to your registered mail id. Check your inbox/spam and verify yourself.Thank you</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="authenticating">Authenticating...</string>
    <string name="registeredSuccessful">Successfully registered</string>
    <string name="loginSuccess">Login is successful</string>
    <string name="uploading">Uploading</string>
    <string name="title_activity_feed">Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
