<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Register">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/actionBarColor"
        app:titleTextColor="@color/background"
        android:id="@+id/register_toolbar"
        android:layout_height="wrap_content">


    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/pb_profile_pic"
                android:layout_height="wrap_content">

            </ProgressBar>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:src="@drawable/user"
                android:layout_marginBottom="50dp"
                android:id="@+id/civ_profile"
                android:layout_centerInParent="true"
                android:layout_height="100dp">
            </de.hdodenhof.circleimageview.CircleImageView>

            <ImageView
                android:layout_width="25dp"
                android:src="@drawable/ic_edit_white_24dp"
                android:layout_centerInParent="true"
                android:layout_height="50dp">

            </ImageView>

        </RelativeLayout>






        <TextView
            android:layout_width="wrap_content"
            android:text="@string/register"
            android:textColor="@color/actionBarColor"
            android:textSize="20dp"
            android:layout_height="wrap_content">


        </TextView>





        <EditText
            android:layout_width="match_parent"
            android:id="@+id/tiName"
            android:maxLines="1"
            android:layout_height="wrap_content"/>






        <EditText
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:id="@+id/ti_email"
            android:maxLines="1"
            android:layout_height="wrap_content">

        </EditText>






        <EditText
            android:layout_width="match_parent"
            android:id="@+id/ti_password"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password">

        </EditText>






        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/ti_cpassword"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword">

        </EditText>


    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/background"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:id="@+id/bt_register"
        android:background="@color/actionBarColor"
        android:textAllCaps="false"
        android:layout_height="wrap_content">

    </Button>
    </LinearLayout>


</LinearLayout>
</ScrollView>